[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/alienblues.wav" type="AudioStream" id=7]
[ext_resource path="res://glowCircleBase.png" type="Texture" id=8]
[ext_resource path="res://glowCircleStick.png" type="Texture" id=9]
[ext_resource path="res://VirtualJoystick.gd" type="Script" id=10]
[ext_resource path="res://MobAlien.tscn" type="PackedScene" id=11]
[ext_resource path="res://Bomb.tscn" type="PackedScene" id=12]
[ext_resource path="res://explosion.tscn" type="PackedScene" id=13]
[ext_resource path="res://art/bomb_explotion.wav" type="AudioStream" id=14]
[ext_resource path="res://Boss.tscn" type="PackedScene" id=15]
[ext_resource path="res://art/Final Boss Battle 6 V1.WAV" type="AudioStream" id=16]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=17]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 478, -1, 0, 0, 0, 0, 478, 719, 0, 0, 0, 0, -2, 717, 0, 0, 0, 0, 0, -1 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )
mob_scene_alien = ExtResource( 11 )
explosion_scene = ExtResource( 13 )
bomb_scene = ExtResource( 12 )
boss_scene = ExtResource( 15 )
bullet_scene = ExtResource( 17 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = -2.0
margin_right = 1026.0
margin_bottom = 1022.0
texture = ExtResource( 5 )

[node name="VirtualJoystick" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Base" type="Sprite" parent="VirtualJoystick"]
position = Vector2( 60, 655 )
scale = Vector2( 0.0606666, 0.0606666 )
texture = ExtResource( 8 )

[node name="Stick" type="Sprite" parent="VirtualJoystick"]
position = Vector2( 59.125, 654.75 )
scale = Vector2( -0.022, 0.023 )
texture = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 229 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BombTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0, -1 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="explosion" from="Player" to="." method="detonate_bomb"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_Timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
